# cmake_minimum_required(VERSION <specify CMake version here>)
project(C_Programming_Exercise C)

set(CMAKE_C_STANDARD 99)

add_executable(chapter1-3 chapter1/exercise_1_3.c)
add_executable(chapter1-4 chapter1/exercise_1_4.c)
add_executable(chapter1-5 chapter1/exercise_1_5.c)
add_executable(chapter1-6 chapter1/exercise_1_6.c)
add_executable(chapter1-7 chapter1/exercise_1_7.c)
add_executable(chapter1-8 chapter1/exercise_1_8.c)
add_executable(chapter1-9 chapter1/exercise_1_9.c)
add_executable(chapter1-10 chapter1/exercise_1_10.c)
add_executable(chapter1-12 chapter1/exercise_1_12.c)
add_executable(chapter1-13 chapter1/exercise_1_13.c)
add_executable(chapter1-14 chapter1/exercise_1_14.c)
add_executable(chapter1-15 chapter1/exercise_1_15.c)